--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cheerio": "^0.22.11",
     "@types/cosmiconfig": "^5.0.3",
     "@types/fs-extra": "^8.0.0",
+    "@types/update-notifier": "^2.5.0",
     "@types/yargs": "^13.0.0",
     "ava": "^2.1.0",
     "husky": "^2.7.0",
@@ -69,6 +70,7 @@
     "fs-extra": "^8.1.0",
     "humanize-string": "^2.1.0",
     "log-util": "^2.2.1",
+    "update-notifier": "^3.0.0",
     "yargs": "^13.2.4"
   }
 }
