--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "ava",
-    "coverage": "nyc npm run test && nyc report --reporter=html && nyc report --reporter=lcov > coverage.lcov",
+    "test": "jest",
+    "coverage": "jest --collect-coverage",
     "release:beta": "npm run test && npm run build && standard-version --prerelease beta && npm publish --tag beta && git push --follow-tags",
     "release": "npm run test && npm run build && standard-version && npm publish && git push --follow-tags"
   },
@@ -34,33 +34,21 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "ava": {
-    "files": [
-      "src/**/__tests__/**/*.ts"
-    ],
-    "compileEnhancements": false,
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ]
-  },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@types/cheerio": "^0.22.11",
     "@types/cosmiconfig": "^5.0.3",
     "@types/fs-extra": "^8.0.0",
+    "@types/jest": "^24.0.17",
     "@types/update-notifier": "^2.5.0",
     "@types/yargs": "^13.0.0",
-    "ava": "^2.1.0",
     "husky": "^2.7.0",
-    "lint-staged": "^8.2.1",
-    "nyc": "^14.1.1",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
-    "standard-version": "^6.0.1",
-    "ts-node": "^8.3.0",
+    "standard-version": "^7.0.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
   },
   "dependencies": {
@@ -74,5 +62,14 @@
     "log-util": "^2.2.1",
     "update-notifier": "^3.0.0",
     "yargs": "^13.2.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.test.ts?(x)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ]
   }
 }
