--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest",
     "coverage": "jest --collect-coverage",
     "release:beta": "npm run test && npm run build && standard-version --prerelease beta && npm publish --tag beta && git push --follow-tags",
-    "release": "npm run test && npm run build && standard-version && npm publish && git push --follow-tags"
+    "release": "npm run test && npm run build && standard-version && npm publish && git push --follow-tags",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -24,15 +27,8 @@
   "homepage": "https://github.com/vivaxy/github-demo-scripts#readme",
   "lint-staged": {
     "*.{js,ts,css,less,json,md,html,yml,yaml,pcss,jsx,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -43,9 +39,10 @@
     "@types/jest": "^26.0.0",
     "@types/update-notifier": "^5.0.0",
     "@types/yargs": "^16.0.0",
-    "husky": "^5.0.0",
+    "husky": "5",
     "jest": "^26.0.0",
     "lint-staged": "^10.0.0",
+    "pinst": "^2.1.4",
     "prettier": "^2.0.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.0.0",
