--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
     "@types/cheerio": "^0.22.11",
     "@types/cosmiconfig": "^5.0.3",
     "@types/fs-extra": "8",
-    "@types/jest": "^26.0.0",
+    "@types/jest": "27",
     "@types/update-notifier": "^5.0.0",
     "husky": "5",
-    "jest": "^26.0.0",
+    "jest": "27",
     "lint-staged": "^10.0.0",
     "pinst": "^2.1.4",
     "prettier": "^2.0.0",
     "standard-version": "^9.0.0",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "27",
     "typescript": "^4.0.0"
   },
   "dependencies": {
@@ -72,5 +72,6 @@
     "collectCoverageFrom": [
       "src/**/*.ts"
     ]
-  }
+  },
+  "packageManager": "npm@8.19.4"
 }
